--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
-Privacy Policy for CaliBeach Finder
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CaliBeach Finder Privacy Policy</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 2rem;
+      line-height: 1.6;
+    }
+    h1 {
+      color: #333;
+    }
+  </style>
+</head>
+<body>
+  <h1>CaliBeach Finder Privacy Policy</h1>
+  <p>Privacy Policy for CaliBeach Finder
 
 Effective Date: 07/19/2025
 
@@ -41,3 +60,6 @@ If you have any questions about this Privacy Policy, please contact us at:
 
 CaliBeach Finder
 Email: lenzi.erickson@gmail.com
+</p>
+</body>
+</html>
