--- a/index.html
+++ b/index.html
@@ -9,57 +9,66 @@
       font-family: Arial, sans-serif;
       padding: 2rem;
       line-height: 1.6;
+      max-width: 800px;
+      margin: auto;
     }
     h1 {
       color: #333;
+    }
+    h2 {
+      margin-top: 2rem;
+      color: #444;
+    }
+    p {
+      margin-bottom: 1rem;
     }
   </style>
 </head>
 <body>
   <h1>CaliBeach Finder Privacy Policy</h1>
-  <p>Privacy Policy for CaliBeach Finder
 
-Effective Date: 07/19/2025
+  <p><strong>Effective Date:</strong> July 19, 2025</p>
 
-CaliBeach Finder (“we”, “our”, or “us”) respects your privacy. This Privacy Policy explains how our mobile application (“CaliBeach Finder” or the “App”) collects, uses, and protects information when you use the App.
-1. Information We Collect
+  <p>
+    CaliBeach Finder (“we”, “our”, or “us”) respects your privacy. This Privacy Policy explains how our mobile application (“CaliBeach Finder” or the “App”) collects, uses, and protects information when you use the App.
+  </p>
 
-We do not collect personally identifiable information from users.
+  <h2>1. Information We Collect</h2>
+  <p>We do not collect personally identifiable information from users.</p>
+  <p>The only information we access is:</p>
+  <ul>
+    <li><strong>Location Data:</strong> The App requests access to your device’s location solely to show your current position on the map and help you find nearby California beaches.</li>
+  </ul>
 
-The only information we access is:
+  <h2>2. How We Use Your Information</h2>
+  <p>Your location data is used only in real-time and only within the App to:</p>
+  <ul>
+    <li>Display your current position on the map</li>
+    <li>Help you discover nearby beaches</li>
+  </ul>
+  <p>We do not collect, store, or transmit your location or any other personal information to our servers or third parties.</p>
 
-    Location Data: The App requests access to your device’s location solely to show your current position on the map and help you find nearby California beaches.
+  <h2>3. Data Sharing</h2>
+  <p>We do not share your information with third parties. Because we do not collect or retain personal data, there is nothing to share or sell.</p>
 
-2. How We Use Your Information
+  <h2>4. Data Retention</h2>
+  <p>We do not retain any user data. Your location is processed only on your device and only while the app is open and in use.</p>
 
-Your location data is used only in real-time and only within the App to:
+  <h2>5. Children’s Privacy</h2>
+  <p>CaliBeach Finder does not knowingly collect any data from children under the age of 13. Since we do not collect any personal information, the app is safe for users of all ages.</p>
 
-    Display your current position on the map
+  <h2>6. Your Consent</h2>
+  <p>By using CaliBeach Finder, you consent to the use of location data as described in this policy.</p>
 
-    Help you discover nearby beaches
+  <h2>7. Changes to This Privacy Policy</h2>
+  <p>We may update this Privacy Policy from time to time. If changes are made, the updated version will be made available through the app or our official app store listing with the new effective date.</p>
 
-We do not collect, store, or transmit your location or any other personal information to our servers or third parties.
-3. Data Sharing
+  <h2>8. Contact Us</h2>
+  <p>
+    If you have any questions about this Privacy Policy, please contact us at:<br>
+    <strong>CaliBeach Finder</strong><br>
+    Email: <a href="mailto:lenzi.erickson@gmail.com">lenzi.erickson@gmail.com</a>
+  </p>
 
-We do not share your information with third parties. Because we do not collect or retain personal data, there is nothing to share or sell.
-4. Data Retention
-
-We do not retain any user data. Your location is processed only on your device and only while the app is open and in use.
-5. Children’s Privacy
-
-CaliBeach Finder does not knowingly collect any data from children under the age of 13. Since we do not collect any personal information, the app is safe for users of all ages.
-6. Your Consent
-
-By using CaliBeach Finder, you consent to the use of location data as described in this policy.
-7. Changes to This Privacy Policy
-
-We may update this Privacy Policy from time to time. If changes are made, the updated version will be made available through the app or our official app store listing with the new effective date.
-8. Contact Us
-
-If you have any questions about this Privacy Policy, please contact us at:
-
-CaliBeach Finder
-Email: lenzi.erickson@gmail.com
-</p>
 </body>
 </html>
